force-app/main/default/objects/sf_devops__Work_Item_Open_Change_Request__e/sf_devops__Work_Item_Open_Change_Request__e.object-meta.xml
<CustomObject>
    <description>Event to notify when a change request for a Work Item feature branch is created</description>
    <label>Work Item Open Change Request</label>
    <pluralLabel>Work Item Open Change Requests</pluralLabel>
</CustomObject>