force-app/main/default/objects/sf_devops__Work_Item_Open_Change_Request__e/fields/sf_devops__Remote_Reference__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Remote_Reference__c</fullName>
    <label>Remote Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>