force-app/main/default/objects/sf_devops__Work_Item_Open_Change_Request__e/fields/sf_devops__Target_Stage_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Target_Stage_Id__c</fullName>
    <label>Target Stage Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>